// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category snapshots disabled 1`] = `
<div
  className="category"
>
  <DropTarget(DroppablePlaceholder)
    className="placeholder"
    disabled={true}
  />
</div>
`;

exports[`category snapshots incorrect 1`] = `
<div
  className="category"
>
  <DropTarget(DroppablePlaceholder)
    className="placeholder"
  >
    <DragSource(Choice)
      categoryId="1"
      choiceIndex={0}
      correct={false}
      key="0"
    />
  </DropTarget(DroppablePlaceholder)>
</div>
`;

exports[`category snapshots renders 1`] = `
<div
  className="category"
>
  <DropTarget(DroppablePlaceholder)
    className="placeholder"
  />
</div>
`;
